Config : jest type 설정정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,8 +27,9 @@
             "@types/*": ["./src/types/*"],
             "@constants/*": ["./src/constants/*"],
             "@services/*": ["./src/services/*"]
-        }
+        },
+        "types": ["jest", "@testing-library/jest-dom"]
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "next.config.js"],
+    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "next.config.js", "jest-setup.ts"],
     "exclude": ["node_modules"]
 }
