--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "axios": "^1.7.9",
         "gsap": "^3.12.7",
         "next": "15.1.5",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "recoil": "^0.7.7",
         "sass": "^1.83.4"
     },
     "devDependencies": {
