Feature : 지도 컴포넌트를 추가하여 주요 도시 간 경로를 시각화
- PolylineMap 컴포넌트 구현
  - react-leaflet을 사용하여 지도 기능 구현
  - 서울, 부산, 대구를 연결하는 경로를 Polyline으로 표시
  - 지도 초기 중심점을 서울로 설정하고 zoom level 7로 지정
  - 컴포넌트를 'use client' 지시어로 클라이언트 사이드 렌더링 설정

- 테스트 환경 구성
  - react-leaflet 모킹 구현으로 테스트 안정성 확보
  - MapContainer, TileLayer, Polyline 컴포넌트 모킹
  - 지도 컨테이너와 경로선이 올바르게 렌더링되는지 검증하는 테스트 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,6 @@
         },
         "types": ["jest", "@testing-library/jest-dom"]
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "next.config.js", "jest-setup.ts"],
+    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "next.config.js", "jest-setup.ts", "src/app/__tests__/__mocks__/reactLeafletMock.js"],
     "exclude": ["node_modules"]
 }
