--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "dependencies": {
         "axios": "^1.7.9",
         "gsap": "^3.12.7",
+        "leaflet": "^1.9.4",
         "next": "15.1.5",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-leaflet": "^5.0.0-rc.2",
         "recoil": "^0.7.7",
         "sass": "^1.83.4"
     },
@@ -26,6 +28,7 @@
         "@testing-library/react": "^16.2.0",
         "@testing-library/user-event": "^14.6.0",
         "@types/jest": "^29.5.14",
+        "@types/leaflet": "^1.9.16",
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
