--- a/package.json
+++ b/package.json
@@ -1,47 +1,38 @@
 {
-    "name": "frontend",
-    "version": "0.1.0",
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "test": "jest",
-        "test:coverage": "jest --coverage",
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint"
-    },
-    "dependencies": {
-        "axios": "^1.7.9",
-        "gsap": "^3.12.7",
-        "leaflet": "^1.9.4",
-        "next": "15.1.5",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
-        "react-leaflet": "^5.0.0-rc.2",
-        "recoil": "^0.7.7",
-        "sass": "^1.83.4"
-    },
-    "devDependencies": {
-        "@eslint/eslintrc": "^3",
-        "@testing-library/jest-dom": "^6.6.3",
-        "@testing-library/react": "^16.2.0",
-        "@testing-library/user-event": "^14.6.0",
-        "@types/jest": "^29.5.14",
-        "@types/leaflet": "^1.9.16",
-        "@types/node": "^20",
-        "@types/react": "^19",
-        "@types/react-dom": "^19",
-        "@typescript-eslint/eslint-plugin": "^8.21.0",
-        "@typescript-eslint/parser": "^8.21.0",
-        "eslint": "^9",
-        "eslint-config-next": "15.1.5",
-        "eslint-config-prettier": "^10.0.1",
-        "eslint-plugin-prettier": "^5.2.3",
-        "jest": "^29.7.0",
-        "jest-environment-jsdom": "^29.7.0",
-        "prettier": "^3.4.2",
-        "ts-jest": "^29.2.5",
-        "typescript": "^5"
-    }
+  "name": "frontend",
+  "version": "0.1.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@vis.gl/react-google-maps": "^1.5.1",
+    "axios": "^1.7.9",
+    "gsap": "^3.12.7",
+    "next": "15.1.5",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "sass": "^1.83.4",
+    "zustand": "^5.0.3"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "@types/leaflet": "^1.9.16",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@typescript-eslint/eslint-plugin": "^8.21.0",
+    "@typescript-eslint/parser": "^8.21.0",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.5",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "prettier": "^3.4.2",
+    "typescript": "^5"
+  }
 }
