--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build:dev": "cp .env.dev .env.local && next build",
+    "build:prod": "cp .env.prod .env.local && next build",
     "start": "next start",
     "lint": "next lint"
   },
