--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,39 +1,42 @@
 name: Deploy to Oracle Instance
 
 on:
-    push:
-        branches:
-            - main
+  push:
+    branches:
+      - main
 
 jobs:
-    deploy:
-        runs-on: ubuntu-latest
+  deploy:
+    runs-on: ubuntu-latest
 
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v3
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-            - name: Log in to Docker Hub
-              uses: docker/login-action@v2
-              with:
-                  username: ${{ secrets.DOCKER_USERNAME }}
-                  password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-            - name: Build Docker image
-              run: |
-                  docker build --no-cache -f Dockerfile.development -t dmdmdm1322/travelingdog-dev-frontend:latest .
+      - name: Build Docker image
+        run: |
+          docker build --no-cache -f Dockerfile.development -t ${{ secrets.DOCKER_USERNAME }}/travelingdog-dev-frontend:latest .
 
-            - name: Push Docker image to Docker Hub
-              run: |
-                  docker push dmdmdm1322/travelingdog-dev-frontend:latest
+      - name: Push Docker image to Docker Hub
+        run: |
+          docker push ${{ secrets.DOCKER_USERNAME }}/travelingdog-dev-frontend:latest
 
-            - name: Install sshpass
-              run: sudo apt-get install sshpass
+      - name: Install sshpass
+        run: sudo apt-get install sshpass
 
-            - name: Deploy to Azure VM
-              run: |
-                  sshpass -p "${{ secrets.AZURE_SSH_PASS }}" ssh -o StrictHostKeyChecking=no ${{ secrets.AZURE_SSH_USER }}@${{ secrets.AZURE_VM_IP }} << 'EOF'
-                  docker pull dmdmdm1322/travelingdog-dev-frontend:latest
-                  docker-compose down
-                  docker-compose up -d
-                  EOF
+      - name: Deploy to Azure VM
+        run: |
+          sshpass -p "${{ secrets.AZURE_SSH_PASS }}" ssh -o StrictHostKeyChecking=no ${{ secrets.AZURE_SSH_USER }}@${{ secrets.AZURE_VM_IP }} << 'EOF'
+          echo "export NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=${{ secrets.NEXT_PUBLIC_GOOGLE_MAPS_API_KEY }}" >> ~/.bashrc
+          echo "export NEXT_PUBLIC_GOOGLE_MAPS_ID=${{ secrets.NEXT_PUBLIC_GOOGLE_MAPS_ID }}" >> ~/.bashrc
+          source ~/.bashrc
+          docker pull ${{ secrets.DOCKER_USERNAME }}/travelingdog-dev-frontend:latest
+          docker-compose down
+          docker-compose up -d
+          EOF
