--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -11,6 +11,14 @@ RUN npm install
 # 애플리케이션 소스 코드 전체 복사
 COPY . .
 
+# 빌드 인자 설정
+ARG NEXT_PUBLIC_GOOGLE_MAPS_API_KEY
+ARG NEXT_PUBLIC_GOOGLE_MAPS_ID
+
+# 런타임 환경 변수 설정
+ENV NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=${NEXT_PUBLIC_GOOGLE_MAPS_API_KEY}
+ENV NEXT_PUBLIC_GOOGLE_MAPS_ID=${NEXT_PUBLIC_GOOGLE_MAPS_ID}
+
 # Next.js 애플리케이션 빌드
 RUN npm run build:dev
 
@@ -20,6 +28,10 @@ WORKDIR /app
 
 # 개발 환경 변수 설정
 ENV NODE_ENV=development
+
+# 실행 환경에서는 빌드 인자를 사용하지 않음 (런타임에 주입)
+ENV NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=""
+ENV NEXT_PUBLIC_GOOGLE_MAPS_ID=""
 
 # 필요한 의존성만 설치
 COPY package.json package-lock.json* ./
