--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@vis.gl/react-google-maps": "^1.5.1",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "gsap": "^3.12.7",
     "next": "15.1.5",
     "next-auth": "^4.24.11",
