Dockerfile 및 이미지 파일 수정
- Dockerfile에서 package-lock.json 복사 제거
- Header 컴포넌트에서 로고 이미지 파일을 PNG에서 WEBP로 변경
- 불필요한 PNG 파일 삭제 및 새로운 WEBP 파일 추가

--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -3,7 +3,7 @@ FROM node:18-alpine AS builder
 WORKDIR /app
 
 # 의존성 설치를 위해 package.json 복사
-COPY package.json package-lock.json* ./
+COPY package.json ./
 
 # 전체 의존성을 설치
 RUN npm install
