--- a/package.json
+++ b/package.json
@@ -1,40 +1,49 @@
 {
-    "name": "frontend",
-    "version": "0.1.0",
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "dev": "next dev",
-        "build:dev": "cp .env.dev .env.local && next build",
-        "build:prod": "cp .env.prod .env.local && next build",
-        "start": "next start",
-        "lint": "next lint"
-    },
-    "dependencies": {
-        "@vis.gl/react-google-maps": "^1.5.1",
-        "axios": "^1.7.9",
-        "date-fns": "^4.1.0",
-        "gsap": "^3.12.7",
-        "next": "^15.2.4",
-        "react": "^19.1.0",
-        "react-dom": "^19.1.0",
-        "react-hook-form": "^7.54.2",
-        "sass": "^1.83.4",
-        "zustand": "^5.0.3"
-    },
-    "devDependencies": {
-        "@eslint/eslintrc": "^3",
-        "@types/leaflet": "^1.9.16",
-        "@types/node": "^20",
-        "@types/react": "^19.1.0",
-        "@types/react-dom": "^19.1.1",
-        "@typescript-eslint/eslint-plugin": "^8.21.0",
-        "@typescript-eslint/parser": "^8.21.0",
-        "eslint": "^9",
-        "eslint-config-next": "15.1.5",
-        "eslint-config-prettier": "^10.0.1",
-        "eslint-plugin-prettier": "^5.2.3",
-        "prettier": "^3.4.2",
-        "typescript": "^5"
-    }
+  "name": "frontend",
+  "version": "0.1.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "next dev",
+    "build:dev": "cp .env.dev .env.local && next build",
+    "build:prod": "cp .env.prod .env.local && next build",
+    "start": "next start",
+    "lint": "next lint",
+    "ionic:serve": "npm run start"
+  },
+  "dependencies": {
+    "@capacitor/android": "7.2.0",
+    "@capacitor/app": "7.0.1",
+    "@capacitor/cli": "7.2.0",
+    "@capacitor/core": "7.2.0",
+    "@capacitor/haptics": "7.0.1",
+    "@capacitor/ios": "7.2.0",
+    "@capacitor/keyboard": "7.0.1",
+    "@capacitor/status-bar": "7.0.1",
+    "@vis.gl/react-google-maps": "^1.5.1",
+    "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
+    "gsap": "^3.12.7",
+    "next": "^15.2.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.54.2",
+    "sass": "^1.83.4",
+    "zustand": "^5.0.3"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "@types/leaflet": "^1.9.16",
+    "@types/node": "^20",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.1",
+    "@typescript-eslint/eslint-plugin": "^8.21.0",
+    "@typescript-eslint/parser": "^8.21.0",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.5",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "prettier": "^3.4.2",
+    "typescript": "^5"
+  }
 }
