--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@capacitor/assets": "^3.0.5",
     "@eslint/eslintrc": "^3",
     "@types/leaflet": "^1.9.16",
     "@types/node": "^20",
