--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "sass": "^1.83.4",
     "zustand": "^5.0.3"
   },
