검색 섹션에 숙소 선택 기능 추가 및 Dockerfile 수정
- 숙소 선택 컴포넌트 추가 및 관련 상태 관리 구현
- Dockerfile에 RAPIDAPI_KEY 빌드 인자 및 환경 변수 추가
- 스타일 시트에 숙소 선택 버튼 및 컨테이너 스타일 추가

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
           docker build --no-cache -f Dockerfile.development \
                     --build-arg NEXT_PUBLIC_GOOGLE_MAPS_API_KEY="${{ secrets.NEXT_PUBLIC_GOOGLE_MAPS_API_KEY }}" \
                     --build-arg NEXT_PUBLIC_GOOGLE_MAPS_ID="${{ secrets.NEXT_PUBLIC_GOOGLE_MAPS_ID }}" \
+                    --build-arg NEXT_PUBLIC_RAPIDAPI_KEY="${{ secrets.NEXT_PUBLIC_RAPIDAPI_KEY }}" \
                     -t ${{ secrets.DOCKER_USERNAME }}/travelingdog-dev-frontend:latest .
 
       - name: Push Docker image to Docker Hub
@@ -40,5 +41,6 @@ jobs:
           docker-compose down
           NEXT_PUBLIC_GOOGLE_MAPS_API_KEY="${{ secrets.NEXT_PUBLIC_GOOGLE_MAPS_API_KEY }}" \
           NEXT_PUBLIC_GOOGLE_MAPS_ID="${{ secrets.NEXT_PUBLIC_GOOGLE_MAPS_ID }}" \
+          NEXT_PUBLIC_RAPIDAPI_KEY="${{ secrets.NEXT_PUBLIC_RAPIDAPI_KEY }}" \
           docker-compose up -d
           EOF
