--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -14,11 +14,12 @@ COPY . .
 # 빌드 인자 설정
 ARG NEXT_PUBLIC_GOOGLE_MAPS_API_KEY
 ARG NEXT_PUBLIC_GOOGLE_MAPS_ID
+ARG NEXT_PUBLIC_RAPIDAPI_KEY
 
 # 런타임 환경 변수 설정
 ENV NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=${NEXT_PUBLIC_GOOGLE_MAPS_API_KEY}
 ENV NEXT_PUBLIC_GOOGLE_MAPS_ID=${NEXT_PUBLIC_GOOGLE_MAPS_ID}
-
+ENV NEXT_PUBLIC_RAPIDAPI_KEY=${NEXT_PUBLIC_RAPIDAPI_KEY}
 # Next.js 애플리케이션 빌드
 RUN npm run build:dev
 
@@ -32,6 +33,7 @@ ENV NODE_ENV=development
 # 실행 환경에서는 빌드 인자를 사용하지 않음 (런타임에 주입)
 ENV NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=""
 ENV NEXT_PUBLIC_GOOGLE_MAPS_ID=""
+ENV NEXT_PUBLIC_RAPIDAPI_KEY=""
 
 # 빌드된 결과물 및 정적 파일 복사
 COPY --from=builder /app/.next/standalone ./
