--- a/.env.prod
+++ b/.env.prod
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_API_URL=https://traveling-prod-api.narudog.com/api
+NEXT_PUBLIC_API_URL=https://traveling-api.narudog.com/api
+NEXTAUTH_URL=https://traveling.narudog.com
