--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,9 @@ jobs:
                     --build-arg NEXT_PUBLIC_GOOGLE_MAPS_API_KEY="${{ secrets.NEXT_PUBLIC_GOOGLE_MAPS_API_KEY }}" \
                     --build-arg NEXT_PUBLIC_GOOGLE_MAPS_ID="${{ secrets.NEXT_PUBLIC_GOOGLE_MAPS_ID }}" \
                     --build-arg NEXT_PUBLIC_RAPIDAPI_KEY="${{ secrets.NEXT_PUBLIC_RAPIDAPI_KEY }}" \
+                    --build-arg GOOGLE_CLIENT_ID="${{ secrets.GOOGLE_CLIENT_ID }}" \
+                    --build-arg GOOGLE_CLIENT_SECRET="${{ secrets.GOOGLE_CLIENT_SECRET }}" \
+                    --build-arg NEXTAUTH_SECRET="${{ secrets.NEXTAUTH_SECRET }}" \
                     -t ${{ secrets.DOCKER_USERNAME }}/travelingdog-dev-frontend:latest .
 
       - name: Push Docker image to Docker Hub
@@ -42,5 +45,8 @@ jobs:
           NEXT_PUBLIC_GOOGLE_MAPS_API_KEY="${{ secrets.NEXT_PUBLIC_GOOGLE_MAPS_API_KEY }}" \
           NEXT_PUBLIC_GOOGLE_MAPS_ID="${{ secrets.NEXT_PUBLIC_GOOGLE_MAPS_ID }}" \
           NEXT_PUBLIC_RAPIDAPI_KEY="${{ secrets.NEXT_PUBLIC_RAPIDAPI_KEY }}" \
+          GOOGLE_CLIENT_ID="${{ secrets.GOOGLE_CLIENT_ID }}" \
+          GOOGLE_CLIENT_SECRET="${{ secrets.GOOGLE_CLIENT_SECRET }}" \
+          NEXTAUTH_SECRET="${{ secrets.NEXTAUTH_SECRET }}" \
           docker-compose up -d
           EOF
