--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^4.1.0",
     "gsap": "^3.12.7",
     "next": "^15.2.4",
+    "next-auth": "^4.24.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.2",
