--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -15,11 +15,18 @@ COPY . .
 ARG NEXT_PUBLIC_GOOGLE_MAPS_API_KEY
 ARG NEXT_PUBLIC_GOOGLE_MAPS_ID
 ARG NEXT_PUBLIC_RAPIDAPI_KEY
+ARG GOOGLE_CLIENT_ID
+ARG GOOGLE_CLIENT_SECRET
+ARG NEXTAUTH_SECRET
 
 # 런타임 환경 변수 설정
 ENV NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=${NEXT_PUBLIC_GOOGLE_MAPS_API_KEY}
 ENV NEXT_PUBLIC_GOOGLE_MAPS_ID=${NEXT_PUBLIC_GOOGLE_MAPS_ID}
 ENV NEXT_PUBLIC_RAPIDAPI_KEY=${NEXT_PUBLIC_RAPIDAPI_KEY}
+ENV GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+ENV GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
+ENV NEXTAUTH_SECRET=${NEXTAUTH_SECRET}
+
 # Next.js 애플리케이션 빌드
 RUN npm run build:dev
 
@@ -34,6 +41,9 @@ ENV NODE_ENV=development
 ENV NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=""
 ENV NEXT_PUBLIC_GOOGLE_MAPS_ID=""
 ENV NEXT_PUBLIC_RAPIDAPI_KEY=""
+ENV GOOGLE_CLIENT_ID=""
+ENV GOOGLE_CLIENT_SECRET=""
+ENV NEXTAUTH_SECRET=""
 
 # 빌드된 결과물 및 정적 파일 복사
 COPY --from=builder /app/.next/standalone ./
