docker-compose.development.yml, Dockerfile.development 및 GitHub Actions 워크플로우에 NEXTAUTH_URL 환경 변수 추가
- 인증 및 배포 과정에서 NEXTAUTH_URL 환경 변수를 추가하여 NextAuth 설정을 개선
- 관련된 Dockerfile 및 GitHub Actions 설정을 업데이트하여 새로운 환경 변수를 반영함

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,7 @@ jobs:
                     --build-arg GOOGLE_CLIENT_ID="${{ secrets.GOOGLE_CLIENT_ID }}" \
                     --build-arg GOOGLE_CLIENT_SECRET="${{ secrets.GOOGLE_CLIENT_SECRET }}" \
                     --build-arg NEXTAUTH_SECRET="${{ secrets.NEXTAUTH_SECRET }}" \
+                    --build-arg NEXTAUTH_URL="${{ secrets.NEXTAUTH_URL }}" \
                     -t ${{ secrets.DOCKER_USERNAME }}/travelingdog-dev-frontend:latest .
 
       - name: Push Docker image to Docker Hub
@@ -48,5 +49,6 @@ jobs:
           GOOGLE_CLIENT_ID="${{ secrets.GOOGLE_CLIENT_ID }}" \
           GOOGLE_CLIENT_SECRET="${{ secrets.GOOGLE_CLIENT_SECRET }}" \
           NEXTAUTH_SECRET="${{ secrets.NEXTAUTH_SECRET }}" \
+          NEXTAUTH_URL="${{ secrets.NEXTAUTH_URL }}" \
           docker-compose up -d
           EOF
