--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -18,6 +18,7 @@ ARG NEXT_PUBLIC_RAPIDAPI_KEY
 ARG GOOGLE_CLIENT_ID
 ARG GOOGLE_CLIENT_SECRET
 ARG NEXTAUTH_SECRET
+ARG NEXTAUTH_URL
 
 # 런타임 환경 변수 설정
 ENV NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=${NEXT_PUBLIC_GOOGLE_MAPS_API_KEY}
@@ -26,6 +27,7 @@ ENV NEXT_PUBLIC_RAPIDAPI_KEY=${NEXT_PUBLIC_RAPIDAPI_KEY}
 ENV GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
 ENV GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
 ENV NEXTAUTH_SECRET=${NEXTAUTH_SECRET}
+ENV NEXTAUTH_URL=${NEXTAUTH_URL}
 
 # Next.js 애플리케이션 빌드
 RUN npm run build:dev
@@ -36,7 +38,6 @@ WORKDIR /app
 
 # 개발 환경 변수 설정
 ENV NODE_ENV=development
-
 
 # 빌드된 결과물 및 정적 파일 복사
 COPY --from=builder /app/.next/standalone ./
