--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "ionic:serve": "npm run start"
   },
   "dependencies": {
+    "@types/qrcode": "^1.5.5",
     "@vis.gl/react-google-maps": "^1.5.1",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "gsap": "^3.12.7",
     "next": "^15.2.4",
     "next-auth": "^4.24.11",
+    "qrcode": "^1.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.2",
